Add support for JPMS modules (#118)
* switch to SNAPSHOT version of AutomataLib

* initial module-infos

* fix xstreams workarounds

* workaround missing docs for now

* cleanup module-info.javas

* cleanups

* drop unnecessary java.desktop dependencies

* typo

* replace jmockit call with mockito call

* fix doc